--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -56,6 +56,7 @@
         <div class="space-y-12">
             <p class="dark:text-white text-center">Stremio-Jackett{% if isCommunityVersion %} Community{% endif %}
                 v4.2.1</p>
+            <p class="dark:text-white text-center">{% if sponsorMessage %}{{ sponsorMessage }}{% endif %}</p>
             <h1 class="text-base font-semibold leading-7 text-gray-900 dark:text-white"
                 style="text-align: center;font-size: 2rem;">
                 Addon configuration</h1>
