fix: allow sponsor message to include html

--- a/source/templates/index.html
+++ b/source/templates/index.html
@@ -55,8 +55,8 @@
              alt="logo" style="width: 100px; height: 100px;">
         <div class="space-y-12">
             <p class="dark:text-white text-center">Stremio-Jackett{% if isCommunityVersion %} Community{% endif %}
-                v4.2.3</p>
-            <p class="dark:text-white text-center">{% if sponsorMessage %}{{ sponsorMessage }}{% endif %}</p>
+                v{{ version }}</p>
+            <p class="dark:text-white text-center">{% if sponsorMessage %}{{ sponsorMessage | safe }}{% endif %}</p>
             <h1 class="text-base font-semibold leading-7 text-gray-900 dark:text-white"
                 style="text-align: center;font-size: 2rem;">
                 Addon configuration</h1>
